# Chat-App

backend/: pyproject.toml
backend/backend/: __main__.py  conn.py  llm.py  llm_funcs.py  ocr.py  server.py  tts.py
frontend/: pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/assist/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: backend_service.dart  backend_services.dart  main.dart
frontend/lib/colors/: colors.dart
frontend/lib/providers/: chat_provider.dart
frontend/lib/screens/: home_screen.dart
frontend/lib/services/: aiservice.dart  speech_service.dart
frontend/lib/widgets/: chat_list.dart  input_bar.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc
