[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.10,<0.116.0)",
    "ruff (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "numpy (==2.1.3)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "tesseract (>=0.1.3,<0.2.0)",
    "pyttsx3 (>=2.98,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
